--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desenhando no Canvas</title>
+    <title>Desenhando</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body style="touch-action: none;">
@@ -13,7 +13,7 @@
     </div>
     <div class="principal">
 
-        <h1>Desenhando no Canvas</h1>
+        <h1>Desenhando</h1>
         
         <canvas id="tela" width="800" height="400"></canvas>
         
