--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
@@ -10,7 +11,7 @@
 <body style="touch-action: none;">
     <div class="aviso">
         <!-- <h1 style="text-align: center;">Não é compatível com esse dispositivo ou resolução de tela.</h1> -->
-        <canvas id="tela" width="300" height="400"></canvas>
+        <canvas class="tela" width="300" height="400"></canvas>
         <div class="colorArea" style="height:55px;width:300px;display:flex; flex:1;flex-direction: row;">
             <div data-color="black" style="background-color: black" class="color active"></div>
             <div data-color="blue" style="background-color: blue" class="color"></div>
@@ -26,7 +27,7 @@
 
         <h1>Desenhando</h1>
         
-        <canvas id="tela" width="800" height="400"></canvas>
+        <canvas class="tela" width="800" height="400"></canvas>
         
         <div class="colorArea">
             <div data-color="black" style="background-color: black" class="color active"></div>
